# xenon

./: .ghci  .ghcid  .gitignore  INSTRUCTIONS-Test.txt  INSTRUCTIONS.txt  Makefile  README.md  cabal.project  cabal.project.freeze  debug  hie.yaml  iodine  iodine.cabal  iodine2  package.yaml  profile  stack.yaml  t  xenon  xenon.cabal
app/: Main.hs
benchmarks/472-mips-pipelined/: 472-mips-fragment.v  alu_ctl_stub.v  alu_stub.v  annot-472-mips-fragment-2.json  annot-472-mips-fragment-3.json  annot-472-mips-fragment-4.json  annot-472-mips-fragment.json  annot-mem32_test_01.json  annot-mips_pipeline.json  annot-mips_pipeline2.json  annot-mux2_test_01.json  annot-mux3_test_01.json  annot-mux3_test_02.json  annot-neg-mem32_test_01.json  annot-neg-mem32_test_02.json  annot-neg-mem32_test_03.json  annot-neg-mux2_test_01.json  annot-neg-mux3_test_02.json  annot-neg-reg_file_test_01.json  annot-neg-reg_file_test_02.json  annot-neg-rom32-test-1.json  annot-reg_file_test_01.json  annot-rom32-test-1.json  annot-rom32-test-2.json  annot-stall2.json  annot-stall3.json  control_pipeline_stub.v  mem32.v  mem32_test_01.v  mips_pipeline.v  mips_pipeline_cleaned.v  mux2_test_01.v  mux3_test_01.v  mux3_test_02.v  neg-mux2_test_01.v  reg_file_test_01.v  rom32-test-1.v  rom32-test-2.v  stall2.v  stall3.v
benchmarks/crypto_cores/RSA4096/ModExp2/: ModExp.v  annot-ModExp.json
benchmarks/crypto_cores/tiny_aes/: data.json
benchmarks/fpu/verilog/: annot-except.json  annot-fpu-2.json  annot-fpu.json  annot-post_norm.json  annot-pre_norm.json  annot-pre_norm_fmul.json  stub_submodules.v
benchmarks/fpu2/divider/: annot-divider.json  annot-divider2.json
benchmarks/picorv32/stubs/: picorv32.v  picorv32_axi.v  picorv32_axi_adapter.v  picorv32_pcpi_div.v  picorv32_pcpi_fast_mul.v  picorv32_pcpi_mul.v  picorv32_regs.v  picorv32_wb.v
benchmarks/scarv-cpu/: Makefile  setup.sh
benchmarks/scarv-cpu/rtl/core/: annot-frv_alu.json  annot-frv_asi.json  annot-frv_bitwise_unrolled.json  annot-frv_core.json  annot-frv_core_fetch_buffer.json  annot-frv_counters.json  annot-frv_csrs.json  annot-frv_gprs_unrolled.json  annot-frv_interrupts.json  annot-frv_leak_unrolled.json  annot-frv_lsu.json  annot-frv_pipeline.json  annot-frv_pipeline_decode.json  annot-frv_pipeline_decode_unrolled.json  annot-frv_pipeline_execute.json  annot-frv_pipeline_fetch.json  annot-frv_pipeline_memory.json  annot-frv_pipeline_register_unrolled.json  annot-frv_pipeline_writeback.json  annot-frv_rngif.json  frv_alu.v  frv_asi.v  frv_bitwise_unrolled.v  frv_core.v  frv_core_fetch_buffer.v  frv_csrs.v  frv_gprs.v  frv_gprs_unrolled.v  frv_leak_unrolled.v  frv_lsu.v  frv_pipeline.v  frv_pipeline_decode_unrolled.v  frv_pipeline_execute.v  frv_pipeline_fetch.v  frv_pipeline_memory.v  frv_pipeline_register_unrolled.v  frv_pipeline_writeback.v  frv_rngif.v
benchmarks/xcrypto-ref/rtl/coprocessor/: annot-mult_test.json  annot-scarv_cop_palu.json  mult_test.v  multiplier_stub_1.v
benchmarks/yarvi/shared/: annot-neg-test-01.json  annot-test-01.json  annot-test-02.json  annot-yarvi.json  annot-yarvi_fixed.json  test-01.v  test-02.v
dbg/: AnnotationFileGenerator.hs  Main.hs
eval-data/: comparison.txt  constraint_sizes-inlined.txt  constraint_sizes-modular.txt  table2.ods
examples/user-study/: stall-annot.json  stalling_cpu.v
examples/verilog/: annot-stall.json
iverilog-parser/: IRExporter.cc  IRExporter.h  IRExpr.cc  IRExprVisitor.cc  IRModule.cc  IRModule.h  IRStmtVisitor.cc  PTask.h  PrologExporter.cc  README.md  StringHeap.h  main.cc  parse.cc  parse.h
prolog-pretty-app/: Main.hs
scripts/: add-times.py  eval-table.py  generate-annotation-file-skeleton.py  get_inlined_modules.py  split_verilog_modules.py  update_annot_file.py
scripts/linprog/: assumptions.py  benchmark.py  config.py  minimize.py  qualifier.py  run.py  slice.py  utils.py
src/Control/Carrier/Trace/: Print.hs
src/Iodine/: ConstantConfig.hs  Debug.hs  IodineArgs.hs  Pipeline.hs  Runner.hs  Types.hs  Utils.hs
src/Iodine/Analyze/: CounterExample.hs  DependencyGraph.hs  FQOutAnalysis.hs  GuessQualifiers.hs  ILP.hs  MinCut.hs  ModuleDependency.hs  ModuleSummary.hs
src/Iodine/Language/: Annotation.hs  IR.hs  IRParser.hs  PrologParser.hs
src/Iodine/Transform/: Horn.hs  HornQuery.hs  HornQuery.hs.bak  InitVars.hs  InitialEquals.hs  Inline.hs  Merge.hs  Normalize.hs  Query.hs  SanityCheck.hs  TransitionRelation.hs  VCGen.hs  VCGen.hs.bak  VCGen2.hs  VariableRename.hs
src/Iodine/Transform/Fixpoint/: Common.hs  Qualifiers.hs  Query.hs  SummaryQualifiers.hs
src/Xenon/: ConstantConfig.hs  Pipeline.hs  Runner.hs  Types.hs  Utils.hs  XenonArgs.hs
src/Xenon/Analyze/: CounterExample.hs  DependencyGraph.hs  FQOutAnalysis.hs  GuessQualifiers.hs  ILP.hs  MinCut.hs  ModuleDependency.hs  ModuleSummary.hs
src/Xenon/Language/: Annotation.hs  IR.hs  IRParser.hs  PrologParser.hs
src/Xenon/Transform/: Horn.hs  HornQuery.hs.old  InitVars.hs  InitialEquals.hs  Inline.hs  Merge.hs  Normalize.hs  SanityCheck.hs  TransitionRelation.hs  VCGen.hs.old  VCGen2.hs  VariableRename.hs
src/Xenon/Transform/Fixpoint/: Common.hs  Qualifiers.hs  Query.hs  SummaryQualifiers.hs
test/: Test.hs  TestData.hs  update_annot_file.py
test/verilog/neg/: annot-neg-submodule-02.json  annot-neg-submodule-03.json  annot-neg-submodule-04.json  annot-neg-submodule-05.json  annot-neg-submodule-06.json  annot-neg-test-12.json  annot-neg-test-2-v0.json  annot-neg-test-2.json  annot-neg-test-3.json  annot-neg-test-6.json  neg-submodule-03.v  neg-submodule-04.v  neg-submodule-05.v  neg-submodule-06.v  neg-test-12.v  neg-test-2-v0.v  neg-test-2.v  neg-test-3.v
test/verilog/pos/: annot-secverilog-01.json  annot-submodule-02.json  annot-submodule-03.json  annot-submodule-04.json  annot-submodule-05.json  annot-tr-submodule-01.json  annot-tr-test-10.json  annot-tr-test-12.json  annot-tr-test-14.json  annot-tr-test-15.json  annot-tr-test-2.json  submodule-02.v  submodule-03.v  submodule-05.v  tr-submodule-01.v  tr-test-12.v  tr-test-13.v  tr-test-14.v  tr-test-15.v  tr-test-9.v
(+22 files in other folders)
