name:           xenon
version:        0.1.0.0
synopsis:       Generates the transition relation & verification conditions from a Verilog IR
description:    Please see the README on Github at <https://github.com/gokhankici/xenon#readme>
category:       Hardware Verification
homepage:       https://github.com/gokhankici/xenon#readme
bug-reports:    https://github.com/gokhankici/xenon/issues
author:         Rami Gokhan Kici
maintainer:     gokhankici@gmail.com
copyright:      2018 Rami Gokhan Kici
license:        MIT
license-file:   LICENSE
build-type:     Custom
extra-source-files:
    README.md
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/gokhankici/xenon

custom-setup
  setup-depends:
      Cabal
    , base

library
  exposed-modules:
      Control.Carrier.Trace.Print
      Xenon.Analyze.CounterExample
      Xenon.Analyze.DependencyGraph
      Xenon.Analyze.FQOutAnalysis
      Xenon.Analyze.GuessQualifiers
      Xenon.Analyze.ModuleDependency
      Xenon.Analyze.ModuleSummary
      Xenon.Analyze.ILP
      Xenon.ConstantConfig
      Xenon.XenonArgs
      Xenon.Language.Annotation
      Xenon.Language.IR
      Xenon.Language.IRParser
      Xenon.Language.PrologParser
      Xenon.Pipeline
      Xenon.Runner
      Xenon.Transform.Fixpoint.Common
      Xenon.Transform.Fixpoint.Qualifiers
      Xenon.Transform.Fixpoint.Query
      Xenon.Transform.Fixpoint.SummaryQualifiers
      Xenon.Transform.Horn
      Xenon.Transform.InitialEquals
      Xenon.Transform.InitVars
      Xenon.Transform.Inline
      Xenon.Transform.Merge
      Xenon.Transform.Normalize
      Xenon.Transform.SanityCheck
      Xenon.Transform.TransitionRelation
      Xenon.Transform.VariableRename
      Xenon.Transform.VCGen2
      Xenon.Types
      Xenon.Utils
    
  other-modules:
      Paths_xenon
  hs-source-dirs:
      src
  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeFamilies TypeOperators UndecidableInstances
  ghc-options: -flate-specialise -fspecialise-aggressively -Werror -fdefer-type-errors -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-redundant-constraints -fwarn-tabs -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -Wno-missing-home-modules
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , cmdargs
    , containers
    , deepseq
    , directory
    , dlist
    , fgl
    , fgl-visualize
    , filepath
    , fused-effects
    , fused-effects-lens
    , hashable
    , hspec
    , hspec-core
    , lens
    , liquid-fixpoint
    , megaparsec
    , mtl
    , pretty
    , process
    , text
    , transformers
    , unordered-containers
    , vector
    , glpk-hs == 0.7
    , gasp == 1.2.0.0
    
  default-language: Haskell2010

executable xenon
  main-is: Main.hs
  other-modules:
      Paths_xenon
  hs-source-dirs:
      app
  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeFamilies TypeOperators UndecidableInstances
  ghc-options: -flate-specialise -fspecialise-aggressively -Werror -fdefer-type-errors -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-redundant-constraints -fwarn-tabs -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -Wno-missing-home-modules -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , cmdargs
    , containers
    , deepseq
    , directory
    , dlist
    , fgl
    , filepath
    , fused-effects
    , fused-effects-lens
    , hashable
    , hspec
    , hspec-core
    , lens
    , liquid-fixpoint
    , megaparsec
    , mtl
    , pretty
    , process
    , text
    , transformers
    , unordered-containers
    , vector
    , xenon
  default-language: Haskell2010

executable xenon-debug
  main-is: Main.hs
  other-modules:
      AnnotationFileGenerator
      Paths_xenon
  hs-source-dirs:
      dbg
  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeFamilies TypeOperators UndecidableInstances
  ghc-options: -flate-specialise -fspecialise-aggressively -Werror -fdefer-type-errors -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-redundant-constraints -fwarn-tabs -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -threaded -rtsopts -with-rtsopts=-N -Wno-missing-home-modules
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , cmdargs
    , containers
    , deepseq
    , directory
    , dlist
    , fgl
    , fgl-visualize
    , filepath
    , fused-effects
    , fused-effects-lens
    , hashable
    , hspec
    , hspec-core
    , lens
    , liquid-fixpoint
    , megaparsec
    , mtl
    , pretty
    , process
    , text
    , transformers
    , unordered-containers
    , vector
    , xenon
  default-language: Haskell2010

-- executable prolog-pretty
--   main-is: Main.hs
--   other-modules:
--       Paths_xenon
--   hs-source-dirs:
--       prolog-pretty-app
--   default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeFamilies TypeOperators UndecidableInstances
--   ghc-options: -flate-specialise -fspecialise-aggressively -Werror -fdefer-type-errors -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-redundant-constraints -fwarn-tabs -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       aeson
--     , base >=4.7 && <5
--     , bytestring
--     , cmdargs
--     , containers
--     , deepseq
--     , directory
--     , dlist
--     , fgl
--     , filepath
--     , fused-effects
--     , fused-effects-lens
--     , hashable
--     , hspec
--     , hspec-core
--     , lens
--     , liquid-fixpoint
--     , megaparsec
--     , mtl
--     , pretty
--     , process
--     , text
--     , transformers
--     , unordered-containers
--     , vector
--     , xenon
--   default-language: Haskell2010

test-suite xenon-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      TestData
      Paths_xenon
  hs-source-dirs:
      test
  default-extensions: ConstraintKinds DataKinds FlexibleContexts FlexibleInstances FunctionalDependencies GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses PolyKinds RankNTypes ScopedTypeVariables TypeApplications TypeFamilies TypeOperators UndecidableInstances
  ghc-options: -flate-specialise -fspecialise-aggressively -Werror -fdefer-type-errors -fwarn-incomplete-patterns -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-orphans -fwarn-overlapping-patterns -fwarn-redundant-constraints -fwarn-tabs -fwarn-unused-binds -fwarn-unused-imports -fwarn-unused-matches -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , cmdargs
    , containers
    , deepseq
    , directory
    , dlist
    , fgl
    , filepath
    , fused-effects
    , fused-effects-lens
    , hashable
    , hspec
    , hspec-core
    , lens
    , liquid-fixpoint
    , megaparsec
    , mtl
    , pretty
    , process
    , text
    , transformers
    , unordered-containers
    , vector
    , timeit
    , xenon
  default-language: Haskell2010
